plugin support for better friends

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -11,3 +11,6 @@
 @import "./toaster/toasts-default";
 @import "./toaster/updater";
 @import "./toaster/missing-notify";
+
+// Plugin Support
+@import "./plugin-support/better-friends";
