--- a/src/toaster/_updater.scss
+++ b/src/toaster/_updater.scss
@@ -1,33 +1,29 @@
-#app-mount {
-    .powercord-toast {
-        &#powercord-updater .header {
-            span {
-                color: var(--text-default);
-            }
-            
-            // Update Pending
-            [aria-label="Info: Updates are available!"] {
-                .icon {
-                    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23FAA61A" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"/></svg>') 0 0/50px 50px no-repeat;
-                    animation: spin 5s linear infinite;
-                }
+#app-mount .powercord-toast#powercord-updater .header {
+    span {
+        color: var(--text-default);
+    }
+    
+    // Update Pending
+    [aria-label="Info: Updates are available!"] {
+        .icon {
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23FAA61A" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"/></svg>') 0 0/50px 50px no-repeat;
+            animation: spin 5s linear infinite;
+        }
 
-                // Header Text
-                + span {
-                    font-size: 0;
-                    margin-bottom: -6px;
+        // Header Text
+        + span {
+            font-size: 0;
+            margin-bottom: -6px;
 
-                    &::after {
-                        content: "There are new updates available!";
-                        font-size: 16px;
-                    }
-                }
-            }
-            
-            // Update Completed
-            [aria-label="Success: Update complete!"] .icon {
-                background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%2343B581" width="18px" height="18px"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"/></svg>') 0 0/50px 50px no-repeat;
+            &::after {
+                content: "There are new updates available!";
+                font-size: 16px;
             }
         }
+    }
+    
+    // Update Completed
+    [aria-label="Success: Update complete!"] .icon {
+        background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%2343B581" width="18px" height="18px"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"/></svg>') 0 0/50px 50px no-repeat;
     }
 }
