--- a/src/plugin-support/_better-friends.scss
+++ b/src/plugin-support/_better-friends.scss
@@ -1,8 +1,6 @@
-#app-mount {
-    .powercord-toast.bf-status-popup .inner .bf-status-popup { 
-        background-color: transparent;
-        margin-top: 20px;
-        margin-bottom: -20px;
-        margin-left: -50px;
-    }
+#app-mount .powercord-toast.bf-status-popup .inner .bf-status-popup { 
+    background-color: transparent;
+    margin-top: 20px;
+    margin-bottom: -20px;
+    margin-left: -50px;
 }
