--- a/src/toaster/_toasts-default.scss
+++ b/src/toaster/_toasts-default.scss
@@ -42,6 +42,7 @@
             color: var(--text-darker);
             font-weight: 600;
             border: none;
+            max-width: 85%;
             margin-top: -32px;
             margin-bottom: 10px;
             margin-right: auto;
